--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -1,5 +1,5 @@
 - name: docker build and push
-  hosts: local  # Replace with the hostname or IP address of your target server
+  hosts: 52.62.227.38  # Replace with the hostname or IP address of your target server
   become: yes  # Run tasks with sudo privileges
 
   tasks:
@@ -13,16 +13,16 @@
         chdir: /var/lib/jenkins/workspace/petstore
 
     - name: tag image
-      command: docker tag petstore:latest sevenajay/petstore:latest 
+      command: docker tag petstore:latest shailesh595/petstore:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
-        username: dockerhub username
-        password: dockerhub password/PAT
+        username: shailesh595
+        password: 80Billion$
 
     - name: Push image
-      command: docker push sevenajay/petstore:latest
+      command: docker push shailesh595/petstore:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 sevenajay/petstore:latest
+      command: docker run -d --name pet1 -p 8081:8080 shailesh595/petstore:latest
